@@ -21,109 +21,109 @@ import java.util.concurrent.TimeUnit;
 
 public class ModLogsCommand extends GenericUserLogsCommand implements ServerCommand {
 
-	private boolean isEnabled;
+    private boolean isEnabled;
 
-	private final Logger log = LoggerFactory.getLogger(this.getClass());
+    private final Logger log = LoggerFactory.getLogger(this.getClass());
 
-	@Override
-	public String gethelp() {
-		return "Zeigt die Logs zu einem Moderator.\n - kann nur von Mitgliedern mit der Berechtigung 'Mitglieder kicken' ausgeführt werden!\n - z.B. [prefix]modlogs @moderator";
-	}
+    @Override
+    public String getHelp() {
+        return "Zeigt die Logs zu einem Moderator.\n - kann nur von Mitgliedern mit der Berechtigung 'Mitglieder kicken' ausgeführt werden!\n - z.B. [prefix]modlogs @moderator";
+    }
 
-	@Override
-	public String[] getCommandStrings() {
-		return new String[] { "modlogs" };
-	}
+    @Override
+    public String[] getCommandStrings() {
+        return new String[]{"modlogs"};
+    }
 
-	@Override
-	public HelpCategories getcategory() {
-		return HelpCategories.MODERATION;
-	}
+    @Override
+    public HelpCategories getCategory() {
+        return HelpCategories.MODERATION;
+    }
 
-	@Override
-	public void performCommand(Member m, GuildMessageChannel channel, Message message) {
+    @Override
+    public void performCommand(Member m, GuildMessageChannel channel, Message message) {
 
-		if (!checkPermissions(m, channel)) {
-			return;
-		}
+        if (MembFailsPermissions(m, channel)) {
+            return;
+        }
 
-		List<Member> mentionedMembers;
-		try {
-			mentionedMembers = getMembersFromMessage(channel, message, m);
-		} catch (IllegalArgumentException e) {
-			return;
-		}
+        List<Member> mentionedMembers;
+        try {
+            mentionedMembers = getMembersFromMessage(channel, message, m);
+        } catch (IllegalArgumentException e) {
+            return;
+        }
 
-		long guildid = channel.getGuild().getIdLong();
+        long guildid = channel.getGuild().getIdLong();
 
-		for (Member memb : mentionedMembers) {
+        for (Member memb : mentionedMembers) {
 
-			long reqid = memb.getIdLong();
+            long reqid = memb.getIdLong();
 
-			try (ResultSet set = LiteSQL.onQuery(
-					"SELECT memberName, action, reason, date FROM modlogs  WHERE guildId = ? AND requesterId = ?",
-					guildid, reqid)) {
+            try (ResultSet set = LiteSQL.onQuery(
+                    "SELECT memberName, action, reason, date FROM modlogs  WHERE guildId = ? AND requesterId = ?",
+                    guildid, reqid)) {
 
-				ArrayList<String> membName = new ArrayList<>();
-				ArrayList<String> action = new ArrayList<>();
-				ArrayList<String> reason = new ArrayList<>();
-				ArrayList<String> date = new ArrayList<>();
+                ArrayList<String> membName = new ArrayList<>();
+                ArrayList<String> action = new ArrayList<>();
+                ArrayList<String> reason = new ArrayList<>();
+                ArrayList<String> date = new ArrayList<>();
 
-				for (int i = 1; i < 51 && set.next(); i++) {
-					membName.add(set.getString("memberName"));
-					action.add(set.getString("action"));
-					reason.add(set.getString("reason"));
-					date.add(set.getString("date"));
-				}
+                for (int i = 1; i < 51 && set.next(); i++) {
+                    membName.add(set.getString("memberName"));
+                    action.add(set.getString("action"));
+                    reason.add(set.getString("reason"));
+                    date.add(set.getString("date"));
+                }
 
-				if (!membName.isEmpty()) {
-					for (int j = 0; j < membName.size(); j++) {
+                if (!membName.isEmpty()) {
+                    for (int j = 0; j < membName.size(); j++) {
 
-						StringBuilder strbuilder = new StringBuilder();
-						strbuilder.append("moderator: " + mentionedMembers.get(0).getEffectiveName());
-						strbuilder.append("\n");
-						strbuilder.append("action: " + action.get(j));
-						strbuilder.append("\n");
-						strbuilder.append("user: @" + mentionedMembers.get(0).getEffectiveName());
-						strbuilder.append("\n");
-						strbuilder.append("reason: " + reason.get(j));
-						strbuilder.append("\n");
-						strbuilder.append("date: " + date.get(j));
-						strbuilder.append("\n");
+                        StringBuilder strbuilder = new StringBuilder();
+                        strbuilder.append("moderator: ").append(mentionedMembers.getFirst().getEffectiveName());
+                        strbuilder.append("\n");
+                        strbuilder.append("action: ").append(action.get(j));
+                        strbuilder.append("\n");
+                        strbuilder.append("user: @").append(mentionedMembers.getFirst().getEffectiveName());
+                        strbuilder.append("\n");
+                        strbuilder.append("reason: ").append(reason.get(j));
+                        strbuilder.append("\n");
+                        strbuilder.append("date: ").append(date.get(j));
+                        strbuilder.append("\n");
 
-						EmbedBuilder embed = EmbedUtils.getBuilderOf(Color.orange, strbuilder,
-								channel.getGuild().getIdLong());
+                        EmbedBuilder embed = EmbedUtils.getBuilderOf(Color.orange, strbuilder,
+                                channel.getGuild().getIdLong());
 
-						embed.setTitle("Modlogs for @" + memb.getEffectiveName());
-						embed.setFooter("requested by @" + m.getEffectiveName());
-						embed.setThumbnail(memb.getUser().getEffectiveAvatarUrl());
+                        embed.setTitle("Modlogs for @" + memb.getEffectiveName());
+                        embed.setFooter("requested by @" + m.getEffectiveName());
+                        embed.setThumbnail(memb.getUser().getEffectiveAvatarUrl());
 
-						channel.sendMessageEmbeds(embed.build()).queue();
-					}
-				} else {
+                        channel.sendMessageEmbeds(embed.build()).queue();
+                    }
+                } else {
 
-					channel.sendMessage("This moderator hasn't a log!").complete().delete().queueAfter(20L,
-							TimeUnit.SECONDS);
-				}
-			} catch (SQLException e) {
-				log.error(e.getMessage(), e);
-			}
-		}
+                    channel.sendMessage("This moderator hasn't a log!").complete().delete().queueAfter(20L,
+                            TimeUnit.SECONDS);
+                }
+            } catch (SQLException e) {
+                log.error(e.getMessage(), e);
+            }
+        }
 
-	}
+    }
 
-	@Override
-	public boolean isEnabled() {
-		return isEnabled;
-	}
+    @Override
+    public boolean isEnabled() {
+        return isEnabled;
+    }
 
-	@Override
-	public void disableCommand() {
-		isEnabled = false;
-	}
+    @Override
+    public void disableCommand() {
+        isEnabled = false;
+    }
 
-	@Override
-	public void enableCommand() {
-		isEnabled = true;
-	}
+    @Override
+    public void enableCommand() {
+        isEnabled = true;
+    }
 }
